# 01-rcli

./: .gitignore  CHANGELOG.md  Cargo.toml  _typos.toml  cliff.toml  deny.toml  test.http
fixtures/: b64.txt  blake3.txt  chacha20.key  chacha20.nonce  cipher.txt  ed25519.pk  ed25519.sk  wallpaper.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: b64.rs  base64.rs  csv.rs  genpass.rs  http.rs  jwt.rs  mod.rs  text.rs
src/process/: base64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  mod.rs  text.rs
