[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
author = ["Mariana Lin <HealMSlin@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
