[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
author = ["Mariana Lin <HealMSlin@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
blake3 = "1.5.5"
chacha20poly1305 = { version = "0.10.1", features = ["alloc"] }
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
